# x

c/: pointers.c
cpp/: async.cc  concurrency.cpp  four_magic_digit.cc  hr_diagonal_difference.cc  hr_sparse_arrays.cc  hr_staircase.cc
docker/valgrind/: Dockerfile
googletest/: .gitignore  CMakeLists.txt
googletest/src/: factorial.cpp
googletest/test/: gtest_main.cpp  test_factorial.cpp
kubiletes/: busybox-pod.yaml
lore/: .hello_world.py.swp  a.out  data.json  hello_world.py  lambda.py
pyoxidizertest/: Cargo.toml  pyoxidizer.toml
pyoxidizertest/pyembed/: build.rs
pyoxidizertest/src/py-code/: setup.py
pyoxidizertest/src/py-code/greeter/: greeter.py
python/: .gitignore  web_scrapper.py
recursive/: elemInList.py  returnNumberAt.py  reverseNumbers.py  test_ReverseNumbers.py  test_elemInList.py  test_returnNumberAt.py
recursive/c++/: factorial.cc  hof_in_cpp.cc  sum_of_squares.cc
recursive/rust/pascal_piramid/src/: main.rs
recursive/rust/pascal_triangle/: Cargo.toml
recursive/rust/pascal_triangle/src/: main.rs
tdd-readmes/: hr_sparse_arrays.md
