[package]
name = "pyoxidizertest"
version = "0.1.0"
authors = ["Jorge Hevia <jmhev@outlook.com>"]
edition = "2018"

[dependencies]
jemallocator-global = { version = "0.3", optional = true }
pyembed = { path = "pyembed" }

[features]
default = []
jemalloc = ["jemallocator-global", "pyembed/jemalloc"]
